REOPENED280929
[WebGPU] Out of memory should trigger a device lost
https://bugs.webkit.org/show_bug.cgi?id=280929
Summary [WebGPU] Out of memory should trigger a device lost
Mike Wyrzykowski
Reported 2024-10-04 20:44:32 PDT
[WebGPU] Out of memory should trigger a device lost
Attachments
Mike Wyrzykowski
Comment 1 2024-10-04 20:44:48 PDT
Mike Wyrzykowski
Comment 2 2024-10-04 20:57:35 PDT
EWS
Comment 3 2024-10-14 22:37:55 PDT
Committed 285178@main (8faeb1bdbecb): <https://commits.webkit.org/285178@main> Reviewed commits have been landed. Closing PR #34734 and removing active labels.
Mike Wyrzykowski
Comment 4 2024-10-15 10:55:13 PDT
Reopened Bugzilla. This caused a race and fuzzer crashes, tracking revert in https://bugs.webkit.org/show_bug.cgi?id=281507.
Note You need to log in before you can comment on or make changes to this bug.