[WebGPU] Out of memory should trigger a device lost https://bugs.webkit.org/show_bug.cgi?id=280929 rdar://136221917

Reviewed by Tadeu Zagallo.

Trigger device lost in low memory scenarios to avoid excessive allocations
on iOS from causing process crashes.

* LayoutTests/fast/webgpu/nocrash/fuzz-280929-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-280929.html: Added.
Add regression test.

* Source/WebCore/Modules/WebGPU/Implementation/WebGPUImpl.cpp:
(WebCore::WebGPU::GPUImpl::loseTheDevice):
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUImpl.h:
* Source/WebCore/Modules/WebGPU/InternalAPI/WebGPU.h:
* Source/WebGPU/WebGPU/Adapter.h:
(WebGPU::Adapter::makeInvalid): Deleted.
* Source/WebGPU/WebGPU/Adapter.mm:
(WebGPU::Adapter::requestDevice):
(WebGPU::Adapter::makeInvalid):
* Source/WebGPU/WebGPU/Instance.h:
* Source/WebGPU/WebGPU/Instance.mm:
(WebGPU::Instance::loseAllDevices):
(WebGPU::Instance::requestAdapter):
(wgpuInstanceLoseAllDevices):
* Source/WebGPU/WebGPU/WebGPUExt.h:
* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp:
(WebKit::GPUConnectionToWebProcess::lowMemoryHandler):
* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteGPU.cpp:
(WebKit::RemoteGPU::lowMemoryHandler):
* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteGPU.h:
* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteGPUProxy.cpp:
(WebKit::RemoteGPUProxy::loseTheDevice):
* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteGPUProxy.h:

Canonical link: https://commits.webkit.org/285178@main