Source/WebKit/GPUProcess/graphics/WebGPU/RemoteGPU.h
@@ -41,6 +41,7 @@
 #include <WebCore/ProcessIdentifier.h>
 #include <WebCore/RenderingResourceIdentifier.h>
 #include <wtf/CompletionHandler.h>
+#include <wtf/MemoryPressureHandler.h>
 #include <wtf/Ref.h>
 #include <wtf/TZoneMalloc.h>
 #include <wtf/ThreadAssertions.h>
@@ -91,6 +92,7 @@ public:
 
     void paintNativeImageToImageBuffer(WebCore::NativeImage&, WebCore::RenderingResourceIdentifier);
     RefPtr<GPUConnectionToWebProcess> gpuConnectionToWebProcess() const;
+    void lowMemoryHandler(Critical, Synchronous);
 
 private:
     friend class WebGPU::ObjectHeap;
